# ex3

./: CMakeLists.txt  Command.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  Data.cpp  Data.h  DefineVarCommand.cpp  DefineVarCommand.h  Expression.h  IfCommand.cpp  IfCommand.h  Lexer.cpp  Lexer.h  NumCommand.cpp  NumCommand.h  OpenServerCommand.cpp  OpenServerCommand.h  Parser.cpp  Parser.h  PrintCommand.cpp  PrintCommand.h  README.md  SetVarCommand.cpp  SetVarCommand.h  Singleton.cpp  Singleton.h  SleepCommand.cpp  SleepCommand.h  Variable.cpp  Variable.h  WhileCommand.cpp  WhileCommand.h  ex1.cpp  ex1.h  file1  main.cpp
